--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -479,7 +479,7 @@ es: # locale
   approve_payslip: "Aprobar Nómina"
   view_all: "Ver todos"
   advanced: "Avanzado"
-  timetable_text: "Calendario"
+  timetable_text: "Horario"
   payroll_text: "Nómina de sueldos"
   add_new_category: "Agregar una nueva categoría"
   percentage: "Porcentaje"
@@ -694,7 +694,7 @@ es: # locale
   fees_paid: "Las tarifas abonadas"
   details: "Detalles"
   employee_id: "Identificación de empleado"
-  dashboard_text: "Tablero de instrumentos"
+  dashboard_text: "Inicio"
   connect: "Conectar"
   fee_name: "Cuota de nombre"
   more: "Más ▼"
