Added message sending feature for finance fee collection updation
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@924 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1517,6 +1517,7 @@ en: # locale
   does_not_exist: "does not exist"
   fee_submission_date_for: "Fee submission date for"
   has_been_published: "has been published"
+  has_been_updated: "has been updated"
   fees_submiting_date_starts_on: "Fees submitting date starts on"
   fees_submission_date: "Fees submission date"
   fees_due: "Fees Due"
