sreeshanth (application and dashboard translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@925 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -118,6 +118,7 @@ en: # locale
 
       liablility:
         amount: "Amount"
+        title:  "Title"
 
       apply_leave:
         employee_leave_types_id: "Employee Leave Types"
