sreeshanth (translation changes in yml and course,elective group)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@928 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1628,7 +1628,7 @@ en: # locale
   generate_subject_wise_report: "Generates subject wise reports"
   marklist_for: "Marklist for"
   average_mark: "Average Mark"
-  exam_groups: "Exam Groups"
+  exam_groups_text: "Exam Groups"
   exam_group: "exam Group"
   view_exam_groups: "View Exam Groups"
   publish_exam_result: "Publish Exam Result"
