sreeshanth (translation changes in yml)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@930 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -693,7 +693,7 @@ en: # locale
   dashboard_text: "Dashboard"
   connect: "Connect"
   fee_name: "Fee name"
-  more: "More ▼"
+  more: "More"
   employee_profile: "Employee Profile"
   contact: "Contact"
   personal: "Personal"
