layout style issues fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@934 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1133,6 +1133,7 @@ en: # locale
   posted: "Posted"
   school_news: "School News"
   news_text: "News"
+  calender_text: "Calendar"
   latest_announcement: "Latest announcements"
   user_deleted: "User Deleted"
   read_news: "Read news"
