sreeshanth(translation changes )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@948 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -116,6 +116,10 @@ en: # locale
       finance_transaction_trigger:
         percentage: "Percentage"
 
+      fee_collection_particular:
+        name: "Name"
+        amount: "Amount"
+
       liablility:
         amount: "Amount"
         title:  "Title"
@@ -502,7 +506,6 @@ en: # locale
   register: "Register"
   report: "Report"
   no_users: "No users found"
-  student: "Student"
   student_details: "Student Details"
   examinations: "Examinations"
   reset: "Reset"
