sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@954 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1697,11 +1697,23 @@ en: # locale
   should_be_later: "should be later than start time"
   attendance_before_the_date_of_admission: "Attendance before the date of admission"
   minmarks_cant_be_more_than_maxmarks: "Minimum marks can't be more than max marks."
-  end_time_cannot_before_start_time: "End time can not be before the start time"
+  end_time_cannot_before_start_time: "End time cannot be before the start time"
   can_not_be_before_the_start_time: "can not be before the start time"
   start_date_cant_be_after_end_date: "start date cant be after end date"
   start_date_cant_be_after_due_date: "start date cant be after due date"
   end_date_cant_be_after_due_date: "end date cant be after due date"
+  category_is_in_use: "Category is in use. Can not delete"
+  cant_be_a_future_date: "cannot be a future date"
+  should_have_an_initial_batch: "Should have an initial batch"
+  student_attendance_type_should_be_one: "Student Attendance Type should be any one of"
+  network_state_should_be_one: "Network State should be any one of"
+  should_be_before_end_date: "should be before end date"
+  end_date_cant_before_start_date: "End date can't be before start date"
+  date_marked_is_before_join_date: "Date marked is before join date"
+  you_have_already_availed: "You have already availed all available leave"
+  no_of_leaves_exceeded_max_allowed: "No of leaves exeeds maximum allowed leaves"
+  date_marked_is_earlier_than_joining_date: "Date marked is earlier than joining date"
+  should_be_greater_than_max_period: "should be greater than Maximum periods per day"
 
   flash_msg1: "Updated additional exam group successfully."
   flash_msg2: "Sorry"
