--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1708,6 +1708,18 @@ es: # locale
   start_date_cant_be_after_end_date: "la fecha de inicio no puede ser después de la fecha de finalización"
   start_date_cant_be_after_due_date: "la fecha de inicio no puede ser después de la fecha de vencimiento"
   end_date_cant_be_after_due_date: "fecha de finalización no puede ser después de la fecha de vencimiento"
+  category_is_in_use: "categoría está en uso, no se puede eliminar."
+  cant_be_a_future_date: "no puede ser una fecha futura"
+  should_have_an_initial_batch: "Debería haber un lote inicial"
+  student_attendance_type_should_be_one: "Tipo de Asistencia Estudiantil debe ser uno de"
+  network_state_should_be_one: "Estado de red debe ser uno de"
+  should_be_before_end_date: "debe ser antes de la fecha final"
+  end_date_cant_before_start_date: "Fecha de finalización no puede ser anterior a la fecha de inicio"
+  date_marked_is_before_join_date: "fecha marcada es antes de unirse a la fecha"
+  you_have_already_availed: "Usted ya ha aprovechado todas las licencias que se conceden"
+  no_of_leaves_exceeded_max_allowed: "No deja de hojas máximo permitido exeeds"
+  date_marked_is_earlier_than_joining_date: "fecha marcada es anterior a la Fecha de incorporación"
+  should_be_greater_than_max_period: "debe ser mayor que los períodos máximos por día"
 
   flash_msg1: "Actualizado grupo de examen adicional con éxito."
   flash_msg2: "Triste"
