--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1702,6 +1702,18 @@ hi:
   start_date_cant_be_after_end_date: "आरंभ तिथि समाप्ति तिथि के बाद खिचड़ी भाषा"
   start_date_cant_be_after_due_date: "आरंभ तिथि नियत तारीख के बाद खिचड़ी भाषा"
   end_date_cant_be_after_due_date: "समाप्ति तिथि नियत तारीख के बाद खिचड़ी भाषा"
+  category_is_in_use: ". श्रेणी प्रयोग में है हटा नहीं सकता"
+  cant_be_a_future_date: "एक भविष्य की तारीख नहीं किया जा सकता है"
+  should_have_an_initial_batch: "एक प्रारंभिक बैच है चाहिए"
+  student_attendance_type_should_be_one: "छात्र उपस्थिति प्रकार किसी एक का होना चाहिए"
+  network_state_should_be_one: "नेटवर्क राज्य किसी एक का होना चाहिए"
+  should_be_before_end_date: "अंत की तारीख से पहले किया जाना चाहिए"
+  end_date_cant_before_start_date: "समाप्ति तिथि आरंभ तिथि से पहले नहीं किया जा सकता है"
+  date_marked_is_before_join_date: "के रूप में चिह्नित तिथि से पहले की तारीख में शामिल है"
+  you_have_already_availed: "आप पहले से ही सभी उपलब्ध छुट्टी प्राप्त कर ली है"
+  no_of_leaves_exceeded_max_allowed: "पत्तियों exeeds अधिकतम अनुमति दी पत्तियों का कोई"
+  date_marked_is_earlier_than_joining_date: "चिह्नित तिथि कार्यग्रहण तिथि से पहले है."
+  should_be_greater_than_max_period: "प्रति दिन अधिकतम अवधि की तुलना में अधिक से अधिक होना चाहिए"
 
   flash_msg1: "अतिरिक्त परीक्षा समूह सफलतापूर्वक नवीनीकृत|"
   flash_msg2: "क्षमा करें"
