sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@961 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1718,6 +1718,14 @@ en: # locale
   other_expense: "Other expense"
   students_marks: "Student's marks"
   online_exam: "Online Exam"
+  donation_from: "Donation from"
+  must_be_positive: "must be positive"
+  not_specified: "not specified"
+  student_category_cant_be_blank: "Student Category cant be blank"
+  student_admission_no_cant_be_blank: "Student Admission number cant be blank"
+  must_be_a_valid_email_address: "must be a valid email address"
+  must_contain_only_letters: "must contain only letters, numbers, hyphen, and  underscores"
+  partial: "partial"
 
   flash_msg1: "Updated additional exam group successfully."
   flash_msg2: "Sorry"
