--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1718,6 +1718,14 @@ hi:
   other_expense: "अन्य व्यय"
   students_marks: "छात्र के निशान"
   online_exam: "ऑनलाइन परीक्षा"
+  donation_from: "से दान"
+  must_be_positive: "सकारात्मक होना चाहिए"
+  not_specified: "निर्दिष्ट नहीं"
+  student_category_cant_be_blank: "Categoría Estudiantes no pueden ser en blanco"
+  student_admission_no_cant_be_blank: "número de admisión de estudiantes no puede ser en blanco"
+  must_be_a_valid_email_address: "एक मान्य ईमेल पता होना चाहिए."
+  must_contain_only_letters: "केवल अक्षर, संख्या, हाइफ़न, और अंडरस्कोर शामिल होना चाहिए."
+  partial: "आंशिक"
 
   flash_msg1: "अतिरिक्त परीक्षा समूह सफलतापूर्वक नवीनीकृत|"
   flash_msg2: "क्षमा करें"
