--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,6 +87,7 @@ en: # locale
       subject:
         name: "Name"
         max_weekly_classes: "Maximum Weekly Classes"
+        code: "Code"
 
       asset:
         amount: "Amount"
@@ -175,6 +176,16 @@ en: # locale
       monthly_payslip:
         salary_date: "Salary Date"
       payroll_category:
+        name: "Name"
+
+      fee_discount:
+        name: "Name"
+        discount: "Discount"
+        type: "Type"
+        receiver: "Receiver"
+
+      student_fee_discount:
+        receiver: "Receiver"
         name: "Name"
 
     errors:
@@ -565,7 +576,6 @@ en: # locale
   edit_additional_details: "Edit Additional Details"
   elective: "Elective"
   elective_group: "Elective Group"
-  message: "Message"
   examination_results: "Examination Results"
   fee_status: "Fee Status"
   fees_text: "Fees"
@@ -860,7 +870,7 @@ en: # locale
   inactive_fields: "Inactive Fields"
   fax: "FAX"
   employee_name: "Employee name"
-  message: "No employees added under this category"
+  message1: "No employees added under this category"
   payslip_generated_on: "Payslip generated on"
   employee_settings: "Employee Settings"
   employee_department: "Employee Department"
