--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -88,6 +88,7 @@ es: # locale
       subject:
         name: "Nombre"
         max_weekly_classes: "Máximo Clases semanales"
+        code: "Código"
 
       asset:
         amount: "Cantidad"
@@ -176,6 +177,16 @@ es: # locale
       monthly_payslip:
         salary_date: "Fecha de salario"
       payroll_category:
+        name: "Nombre"
+
+      fee_discount:
+        name: "Nombre"
+        discount: "Descuento"
+        type: "Tipo"
+        receiver: "Receptor"
+
+      student_fee_discount:
+        receiver: "Receptor"
         name: "Nombre"
 
     errors:
@@ -570,7 +581,6 @@ es: # locale
   edit_additional_details: "Editar detalles"
   elective: "Electivo"
   elective_group: "Grupo electiva"
-  message: "Mensaje"
   examination_results: "Resultados de los exámenes"
   fee_status: "Cuota de Estado"
   fees_text: "Honorarios"
@@ -866,7 +876,7 @@ es: # locale
   inactive_fields: "Los campos inactivos"
   fax: "FAX"
   employee_name: "Nombre del empleado"
-  message: "Ningún empleado añadido en esta categoría"
+  message1: "Ningún empleado añadido en esta categoría"
   payslip_generated_on: "Nómina generados en"
   employee_settings: "Configuración de los empleados"
   employee_department: "Empleado del Departamento de"
